# sponza

./: .gitmodules  CMakeLists.txt
src/: main.cpp
